--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="navbar">
-            <img src="images/image1.jpeg" alt="logo" class="logo">
+            <img src="images/logo.png" alt="logo" class="logo">
             <nav>
                 <ul>
                     <li><a href="">About</a></li>
@@ -27,8 +27,16 @@
                 <h3>Wireless controller for Playstation 4</h3>
                 <p>(Compatible/Generic)</p>
                 <h4>$32.50</h4>
+                <button type="button">Buy Now<img src="images/arrow.png"</button>
             </div>
-            <div class="col-2"></div>
+            <div class="col-2">
+                <img src="images/controller.png" alt="controller" class="controller">
+                <div class="color-box"></div>
+                <div class="add-btn">
+                    <img src="images/add.png" alt="add">
+                    <p><small>Add to cart</small></p>
+                </div>
+            </div>
         </div>
 
     </div>
