--- a/index.html
+++ b/index.html
@@ -47,9 +47,14 @@
 
     </div>
 
-
     <div class="container2">
-        hi
+        <div class="services">OUR SERVICES</div>
+        
+        <div class="row2">
+            <div class="colu-1">hiiiii</div>
+            <div class="colu-2">colu2 here</div>
+            <div class="colu-3">colu 3 ehre</div>
+        </div>
     </div>
 
     <script>
