--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="row">
             <div class="col-1">
-                <h2>PS4 V2<br> DualShock 4</h2>
+                <h2>PS4 V2<br> Gaming Pack</h2>
                 <h3>Wireless controller for PlayStation 4</h3>
                 <p>(Compatible/Generic)</p>
                 <h4>$32.50</h4>
